Document extend token
